--- a/src/Components/Display/cardHero/style.scss
+++ b/src/Components/Display/cardHero/style.scss
@@ -1,14 +1,15 @@
 .card_hero {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(12, 1fr);
     background-color: #FFB88A;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
+    position: relative;
 
 
     figure {
         height: 456px;
-        min-width: 551px;
+        grid-column: span 7;
 
         img {
             object-fit: cover;
@@ -19,10 +20,14 @@
 }
 
 .body_card_hero {
-    @apply flex items-center justify-center px-3;
+    @apply flex items-center justify-center px-9;
     flex-direction: column;
+    grid-column: span 5;
 }
 
 .next_hero {
-    @apply flex items-end justify-end;
+    position: absolute;
+    bottom: 20px;
+    right: 27px;
+    cursor: pointer;
 }
