--- a/src/Components/General/input/style.scss
+++ b/src/Components/General/input/style.scss
@@ -1,7 +1,7 @@
 .input_ladin {
     border-radius: 30px;
     border: 2px solid var(--primary);
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 .input_ladin {
