--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,9 @@
 
 * {
   font-family: 'Work Sans', sans-serif;
+  box-sizing: border-box
 }
 
 .wrap {
-  @apply w-full px-12;
+  @apply w-full px-28;
 }
