--- a/src/page/homePage/style.scss
+++ b/src/page/homePage/style.scss
@@ -1,11 +1,4 @@
-.test {
-    @apply bg-red-400;
-}
-
-
-
-
-
+@import '@splidejs/splide/css';
 
 .section_hero {
     padding: 77px 0 116px 0;
@@ -86,4 +79,73 @@
 .card_recipe {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+}
+
+.wrap_collection {
+
+    padding: 97px 20%;
+
+    h2 {
+        margin-bottom: 20px;
+    }
+
+    .collection {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+}
+
+.latest_recipe {
+    @apply flex items-center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 52px 0;
+}
+
+.carosel {
+    @apply flex justify-center;
+    width: 100%;
+
+    .splide__slide {
+        @apply flex justify-center;
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    .splide__pagination {
+        bottom: -1.5em;
+    }
+
+    .splide__pagination__page.is-active {
+        background: var(--primary);
+    }
+
+    button,
+    [type='button'] {
+        background-color: #D9D9D9;
+    }
+
+}
+
+.splide {
+    width: 90%;
+
+    .splide__arrow--prev {
+        left: -3rem;
+    }
+
+    .splide__arrow--next {
+        right: -3rem;
+    }
+
+
+}
+
+.splide:not(.is-overflow) .splide__pagination {
+    display: flex;
 }
