--- a/src/Components/Layout/navbar/style.scss
+++ b/src/Components/Layout/navbar/style.scss
@@ -16,6 +16,7 @@
 
     .icon_menu {
         cursor: pointer;
+        display: none;
     }
 }
 
@@ -35,9 +36,11 @@
 }
 
 .menu_nav {
-    @include grid(3);
+    display: flex;
     @apply items-center;
     gap: 10px;
 
-
+    input {
+        max-width: 180px;
+    }
 }
