--- a/src/Components/Layout/navbar/style.scss
+++ b/src/Components/Layout/navbar/style.scss
@@ -40,22 +40,36 @@
     @apply items-center;
     gap: 10px;
 
+    .wrap_profil {
+        width: 45px;
+        height: 45px;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
     input {
         max-width: 180px;
     }
 
-    svg {
+    svg,
+    img {
         cursor: pointer;
         border-radius: 50px;
 
     }
 
     svg:hover,
+    img:hover,
     .btn_sing:hover {
         transform: scale(1.1);
     }
 
-    svg:hover {
+    svg:hover,
+    img:hover {
         background: #d9d9d9;
     }
 }
